deps/chakrashim/core/test/strict/strictargs2-deferred.baseline
SyntaxError: Invalid usage of 'arguments' in strict mode
	at code (strictargs2-deferred.js:8:75)
